#69 - refactoring.